--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   background-color: #fff;
   color: white;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
 }
 
@@ -33,9 +32,9 @@
 }
 
 .file-input {
-    color: rgb(53, 156, 77);
-    font-weight: 600;
-    align-self: center;
+  color: rgb(53, 156, 77);
+  font-weight: 600;
+  align-self: center;
 }
 
 .plus {
@@ -51,8 +50,8 @@
   border: 1px solid;
   font-weight: 600;
   border-radius: 5px;
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #fff;
+  color: #000;
   cursor: pointer;
 }
 
@@ -72,7 +71,7 @@
   flex: 1;
   padding: 10px;
   overflow-y: auto;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 .chat-item {
@@ -105,7 +104,6 @@ input[type="text"] {
   margin-right: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin-right: 10px;
 }
 
 .ask-button {
@@ -121,9 +119,7 @@ button:hover {
   background-color: #f5f5f5;
 }
 
-
 @media screen and (max-width: 680px) {
-
   .file-input {
     margin-left: 20px;
   }
@@ -138,6 +134,6 @@ button:hover {
   }
 
   .text {
-    display: none;   
+    display: none;
   }
 }
